--- a/Sistema de ventas para El Balde/CapaVisual/CapaVisual.csproj
+++ b/Sistema de ventas para El Balde/CapaVisual/CapaVisual.csproj
@@ -223,5 +223,8 @@
   <ItemGroup>
     <None Include="Resources\Check.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\El balde logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
